--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -20,7 +20,7 @@ jobs:
         run: pip install semgrep
 
       - name: Run Semgrep (CI rules)
-        run: semgrep --config p/ci --json --output semgrep-report.json .
+        run: semgrep --config p/ci,p/security-audit, p/python, p/owasp-top-ten, p/default --json --output semgrep-report.json .
 
       - name: Upload Semgrep report
         uses: actions/upload-artifact@v4
